--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -75,7 +75,7 @@ html {
     }
     textarea{
         display: block;
-        height: 120px;
+        height: 60px;
         width: 320px;
         margin: auto;
         background:#F1F3F4;
@@ -84,6 +84,7 @@ html {
         font-family: 'Oswald', sans-serif;
         border: none;
         border-radius: 5px;
+        text-align: justify;
         resize: none;
         outline: none;
         &:focus {
@@ -109,13 +110,20 @@ html {
             color: #45423D;
         }
     }
-    .entryHolder {
+    #entryHolder {
         background-color: #45423D;
         color: #C17E6A;
+        border-radius: 5px;
         font-size: 16px;
         width: 90%;
-        height: 150px;
+        height: 100px;
         margin: auto;
+        text-align: left;
+        margin-top: 0;
+        .text {
+            padding-top: 5px;
+            padding-left: 5px;
+        }
     }
 }
 
@@ -209,5 +217,78 @@ html {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+
+/* MEDIA QUERIES */
+
+@media all and (max-width: 1366px) {
+    html {
+        font-size: 18px;
+    }
+
+    #app {
+        width: 400px;
+        height: 600px;
+        margin-top: 4vh;
+        margin-bottom: 4vh;
+        input {
+            height: 40px;
+            width: 260px;
+            font-size: 16px;
+        }
+        textarea {
+            height: 40px;
+            width: 260px;
+            font-size: 14px;
+        }
+        button {
+            height: 40px;
+            width: 150px;
+            font-size: 22px;
+        }
+        #entryHolder {
+            height: 130px;
+        }
+    }
+}
+
+@media all and (max-width: 800px) {
+    html {
+        font-size: 16px;
+    }
+
+    #app {
+        width: 250px;
+        height: 500px;
+        margin-top: 4vh;
+        margin-bottom: 4vh;
+        padding: 30px;
+        h1 {
+            font-size: 2em;
+        }
+        input {
+            height: 30px;
+            width: 180px;
+        }
+        textarea {
+            height: 30px;
+            width: 180px;
+        }
+        button {
+            height: 30px;
+            width: 100px;
+            font-size: 18px;
+            margin-top: 30px;
+        }
+        .holder-entry {
+            h2 {
+                margin-bottom: 0;
+            }
+        }
+        #entryHolder {
+            height: 90px;
+        }
     }
 }
