--- a/website/style/style.css
+++ b/website/style/style.css
@@ -73,7 +73,7 @@ html {
 }
 #app textarea {
   display: block;
-  height: 120px;
+  height: 60px;
   width: 320px;
   margin: auto;
   background: #F1F3F4;
@@ -82,6 +82,7 @@ html {
   font-family: "Oswald", sans-serif;
   border: none;
   border-radius: 5px;
+  text-align: justify;
   resize: none;
   outline: none;
 }
@@ -107,13 +108,20 @@ html {
   background: #C17E6A;
   color: #45423D;
 }
-#app .entryHolder {
+#app #entryHolder {
   background-color: #45423D;
   color: #C17E6A;
+  border-radius: 5px;
   font-size: 16px;
   width: 90%;
-  height: 150px;
+  height: 100px;
   margin: auto;
+  text-align: left;
+  margin-top: 0;
+}
+#app #entryHolder .text {
+  padding-top: 5px;
+  padding-left: 5px;
 }
 
 /** ANIMATIONS **/
@@ -200,6 +208,73 @@ html {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+/* MEDIA QUERIES */
+@media all and (max-width: 1366px) {
+  html {
+    font-size: 18px;
+  }
+
+  #app {
+    width: 400px;
+    height: 600px;
+    margin-top: 4vh;
+    margin-bottom: 4vh;
+  }
+  #app input {
+    height: 40px;
+    width: 260px;
+    font-size: 16px;
+  }
+  #app textarea {
+    height: 40px;
+    width: 260px;
+    font-size: 14px;
+  }
+  #app button {
+    height: 40px;
+    width: 150px;
+    font-size: 22px;
+  }
+  #app #entryHolder {
+    height: 130px;
+  }
+}
+@media all and (max-width: 800px) {
+  html {
+    font-size: 16px;
+  }
+
+  #app {
+    width: 250px;
+    height: 500px;
+    margin-top: 4vh;
+    margin-bottom: 4vh;
+    padding: 30px;
+  }
+  #app h1 {
+    font-size: 2em;
+  }
+  #app input {
+    height: 30px;
+    width: 180px;
+  }
+  #app textarea {
+    height: 30px;
+    width: 180px;
+  }
+  #app button {
+    height: 30px;
+    width: 100px;
+    font-size: 18px;
+    margin-top: 30px;
+  }
+  #app .holder-entry h2 {
+    margin-bottom: 0;
+  }
+  #app #entryHolder {
+    height: 90px;
   }
 }
 
